[task_1.5] ref: add Repository pattern

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ ToDoList/Pods/Pods.xcodeproj/xcuserdata
 ToDoList/ToDoList.xcworkspace/xcuserdata
 ToDoList/ToDoList.xcodeproj/xcuserdata
 ToDoList/.DS_Store
+.DS_Store
+ToDoList/ToDoList.xcodeproj/project.xcworkspace/xcuserdata/svysotsky.xcuserdatad/UserInterfaceState.xcuserstate
